Fetches articles for a given url